If one endpoint of a range is in anonymous content for a given bindingParent, the other one must be too from now on.  Incidentally improves performance on pages with lots of textfields.  Bug 372086, r+sr=sicking