content/base/src/nsRange.cpp
@@ -540,10 +540,18 @@ IsValidBoundary(nsINode* aNode)
     return nsnull;
   }
 
-  if (aNode->IsNodeOfType(nsINode::eCONTENT) &&
-      NS_STATIC_CAST(nsIContent*, aNode)->Tag() ==
-        nsGkAtoms::documentTypeNodeName) {
-    return nsnull;
+  if (aNode->IsNodeOfType(nsINode::eCONTENT)) {
+    nsIContent* content = NS_STATIC_CAST(nsIContent*, aNode);
+    if (content->Tag() == nsGkAtoms::documentTypeNodeName) {
+      return nsnull;
+    }
+
+    // If the node has a binding parent, that should be the root.
+    // XXXbz maybe only for native anonymous content?
+    nsINode* root = content->GetBindingParent();
+    if (root) {
+      return root;
+    }
   }
 
   // Elements etc. must be in document or in document fragment,
